# LobsterLogAnalyzer

./: .gitignore  main.py  pyproject.toml
Old/: main.py
Old/utility/: csv_and_excel_writer.py
patterns/: patterns.json
src/: app.py  fix_qrc_import.py  pyproject.toml
src/config/: log_patterns.json
src/core/: analyzer.py  exportManager.py  exporter.py  fileParser.py  filters.py  models.py  parser.py
src/event_handling/: buttonEvents.py  comboboxEvents.py  lineEditEvents.py
src/gui/: LobsterGeneralLogViewer.ui  LobsterGeneralLogViewer_ui.py  thread_worker.py
src/gui/assets/qrc/: LobsterLogReporter.qrc  LobsterLogReporter_rc.py
src/gui/assets/styles/: dark.qss  light.qss
src/gui/events/: buttonEvents.py  comboboxEvents.py  lineEditEvents.py  menuBarEvents.py
src/gui/models/: treeViewModel.py
src/gui/qrc/: LobsterLogReporter.qrc  LobsterLogReporter_rc.py
src/gui/styles/: default.qss
src/gui/ui/main/: LobsterGeneralLogViewer.ui  LobsterGeneralLogViewer_ui.py
src/gui/utils/: UIMixinUtility.py  UIStateManager.py  configHandler.py  helperUtility.py  signalConnector.py
src/gui/widgets/: tableViewModel.py  treeViewModel.py
src/patterns/: patterns.json
src/services/: log_service.py
src/utils/: UIMixinUtility.py  UIStateManager.py  helperUtility.py  patternHandler.py  signalConnector.py
utility/: core.py  csv_and_excel_writer.py  parser.py  pipeline.py  utils.py
