[project]
name = "lobsterlogreporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "auto-py-to-exe>=2.49.0",
    "pandas>=3.0.0",
    "pyqtdarktheme>=2.1.0",
    "pyside6-essentials>=6.10.2",
    "xlsxwriter>=3.2.9",
]
